2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.mdp: Don't copy referenced assemblies.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Removed version auto-increment.
	* ILAsmBinding.mdp, Makefile.am: Synchronized the MD project and the
	  Makefile

2006-12-07 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* ILAsmBinding.mdp: Updated to ensure it can be
	built from MonoDevelop.

2006-09-18 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* ILAsmBinding.mdp: Updated.

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Updated versions.

2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* ILAsmBinding.addin.xml: Use the DataType element instead fof Class
	  to declare serializable types.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* ILAsmBinding.addin.xml: Updated versions.
	* ILAsmBinding.mdp: Updated.

2006-04-21 Lluis Sanchez Gual <lluis@novell.com> 

	* ILAsmLanguageBinding.cs: Implement GetSupportedClrVersions.

2006-04-07  David Makovský (Yakeen) <yakeen@sannyas-on.net>

	* ILAsmBinding.addin.xml: renamed attribute in FileFilter Extension

2006-03-30 Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am:
	* ILAsmBinding.addin.xml: Updated references.

2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* ILAsmBinding.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* ILAsmBinding.addin.xml: Updated add-in versions.

2005-12-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* ILAsmLanguageBinding.cs: Implemented the new methods in
	IDotNetLanguageBinding.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* ILAsmBinding.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.

2005-10-06  John Luke  <john.luke@gmail.com>

	* ILAsmCompilerManager.cs: remove unused fileUtilityService