@@ -1,4 +1,5 @@
-<AddIn id          = "MonoDevelop.ILAsmBinding"
+<Addin id          = "ILAsmBinding"
+       namespace   = "MonoDevelop"
        name        = "ILAsm Language Binding"
        author      = "Todd Berman"
        copyright   = "GPL"
@@ -12,10 +13,10 @@
   </Runtime>
 
 	<Dependencies>
-	    <AddIn id="MonoDevelop.Core" version="0.13.0"/>
-	    <AddIn id="MonoDevelop.Core.Gui" version="0.13.0"/>
-	    <AddIn id="MonoDevelop.Projects" version="0.13.0"/>
-		<AddIn id="MonoDevelop.Ide" version="0.13.0"/>
+	    <Addin id="Core" version="0.13.0"/>
+	    <Addin id="Core.Gui" version="0.13.0"/>
+	    <Addin id="Projects" version="0.13.0"/>
+		<Addin id="Ide" version="0.13.0"/>
 	</Dependencies>
 	
   <Extension path = "/MonoDevelop/ProjectTemplates">
@@ -30,11 +31,11 @@
 	</Extension>
 
   <Extension path = "/SharpDevelop/Workbench/ProjectOptions/ConfigurationProperties">
-    <Conditional activelanguage = "ILAsm">
+    <Condition id="activelanguage" value = "ILAsm">
       <DialogPanel id = "ILAsmCompilerParametersPanel"
                    _label = "Compiler"
                    class = "ILAsmBinding.CompilerParametersPanel"/>
-    </Conditional>
+    </Condition>
   </Extension>
 
   <Extension path = "/SharpDevelop/Workbench/LanguageBindings">
@@ -47,4 +48,4 @@
 		<DataType class = "ILAsmBinding.ILAsmCompilerParameters" />
 	</Extension>
 	
-</AddIn>
+</Addin>
