@@ -1,3 +1,8 @@
+2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* ILAsmBinding.mdp, Gui/CompilerParametersPanel.cs, Makefile.am,
+	  ILAsmBinding.addin.xml: Migration to Mono.Addins.
+
 2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* ILAsmBinding.mdp: Don't copy referenced assemblies.
